fixed a minor layout issue and removed tracking link

--- a/public/stylesheets/views/events/show.css
+++ b/public/stylesheets/views/events/show.css
@@ -24,7 +24,7 @@
 #event div.loginBlock
 {
   -moz-border-radius:10px 10px 10px 10px;
-  padding:10px;
+  padding:10px 15px 10px 15px;
   margin: 10px 15px 15px 15px;
   border:2px solid #DDDDDD;
 }
